--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-/*========================================================================*/
-
-
-
-/* ///////////////////////////////////////////////////////////////////// 
-// 03 - Preloader
-/////////////////////////////////////////////////////////////////////*/
-
 #preloader {
     position:fixed;
     left:0;
@@ -16,14 +8,22 @@
     overflow:visible;
     background: #000 url('../img/loader.gif') no-repeat center center;
 }
+.flex-container {
+	display: flex;
+	align-items: center; /* Vertically align items */
+	justify-content: space-between; /* Distribute space between text and image */
+  }
+  
+  .text-content {
+	flex: 1; /* Allow the text to take up as much space as needed */
+  }
+  
+  .DP {
+	width: 38rem; /* Adjust the size of the image as needed */
+	margin-left: 17rem; /* Add some space between the image and the edge */
+  }
+  
 
-
-
-
-
-/* ==========================================================================
-	Global Styles
-========================================================================== */
 div.relative  {
 	position: relative ;
 	bottom: 100px;
