--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ table {
 }
 /* ==========================================================================Section Styles========================================================================== */
 .section-padding {
-	padding:90px 0 100px
+	padding:90px 0 130px
 }
 .dark-bg {
 	background:#f3f5f8;
@@ -563,10 +563,11 @@ table {
 }
 /* ==========================================================================Intro========================================================================== */
 .intro p {
+	font-size: 16px;
 	margin:50px 0 0;
 }
 h1.arrow {
-	font-size: 16px;
+	font-size: 50px;
 	text-transform:uppercase;
 	color:#353535;
 	letter-spacing: 4px;
@@ -913,9 +914,10 @@ img.grayscale:hover {
 	margin-bottom:20px;
 }
 ul.social-buttons {
-	list-style:none;
-	margin:0;
-	padding:0;
+	list-style: none;
+  	padding: 0;
+  	display: flex;
+  	justify-content: center;
 }
 ul.social-buttons li {
 	display:inline-block;
